revisi image path index

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
           <!-- Card dokter 2 -->
           <div class="col mb-4">
             <div class="card h-100 shadow-md">
-              <img src="../dist/img/doctor2.jpg" class="card-img-top" alt="...">
+              <img src="dist/img/doctor2.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title mb-2">Drg. Kirana</h5>
                 <p class="card-text">Drg. Kirana Julia, Sp. KG, merupakan ahli spesialis ortodonti yang meneliti posisi rahang pasien yang tidak normal.</p>
@@ -266,7 +266,7 @@
           <!-- Card dokter 3 -->
           <div class="col mb-4">
             <div class="card h-100 shadow-md">
-              <img src="../dist/img/doctor3.jpg" class="card-img-top" alt="...">
+              <img src="dist/img/doctor3.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title mb-2">Drg. Rizki</h5>
                 <p class="card-text">Drg. Rizki Febryan, Sp. RKG, adalah seorang dokter yang akan mengambil gambar dan data x-ray rongga mulut Anda.</p>
@@ -279,7 +279,7 @@
           <!-- Card dokter 4 -->
           <div class="col mb-4">
             <div class="card h-100 shadow-md">
-              <img src="../dist/img/doctor4.jpg" class="card-img-top" alt="...">
+              <img src="dist/img/doctor4.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title mb-2">Drg. Devy</h5>
                 <p class="card-text">Drg. Devy Sendy Sp. KGA, adalah seorang dokter spesialis gigi anak, ia merawat gigi anak-anak dengan keceriaan.</p>
@@ -292,7 +292,7 @@
           <!-- Card dokter 5 -->
           <div class="col mb-4">
             <div class="card h-100 shadow-md">
-              <img src="../dist/img/doctor1.jpg" class="card-img-top" alt="...">
+              <img src="dist/img/doctor1.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title mb-2">Drg. Zain</h5>
                 <p class="card-text">Drg. Zain Abdullah, Sp. KG, merupakan spesialis konservasi gigi yang akan menemani perawatan Anda dengan ketelitian.</p>
