revisi path, link, direktori

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <!-- Left navbar links -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="index.html" class="nav-link active">Home</a>
+              <a href="index.html" class="nav-link active">Beranda</a>
             </li>
             <li class="nav-item">
               <a href="pages/Layanan/layanan.html" class="nav-link">Layanan</a>
@@ -190,15 +190,15 @@
                 <h1 class="mb-5">Welcome to Blue Dental</h1>
             </div>
             <div class="card col-lg-4 text-center mx-auto shadow-lg">
-              <img src="../dist/img/receive.png" class="mt-4" alt="">
+              <img src="dist/img/receive.png" class="mt-4" alt="">
               <h2 class="mt-4"><a href="pages/Layanan/layanan.html" class="text-decoration-none text-info">Layanan</a></h2>
             </div><!-- /.col-lg-4 -->
             <div class="card col-lg-4 text-center mx-auto shadow-lg">
-              <img src="../dist/img/heart.png" class="mt-4" alt="">
+              <img src="dist/img/heart.png" class="mt-4" alt="">
               <h2 class="mt-4"><a href="pages/forms/form_booking.html" class="text-decoration-none text-info">Buat Janji</a></h2>
             </div><!-- /.col-lg-4 -->
             <div class="card col-lg-4 text-center mx-auto shadow-lg">
-              <img src="../dist/img/hands.png" class="mt-4" alt="">
+              <img src="dist/img/hands.png" class="mt-4" alt="">
               <h2 class="mt-4"><a href="#dokter-kami" class="text-decoration-none text-info">Dokter Kami</a></h2>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
@@ -240,7 +240,7 @@
           <!-- Card dokter 1 -->
           <div class="col mb-4">
             <div class="card h-100 shadow-md">
-              <img src="../dist/img/doctor5.jpg" class="card-img-top" alt="...">
+              <img src="dist/img/doctor5.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title mb-2">Drg. Amalia</h5>
                 <p class="card-text">Drg. Amalia Rahmah, Sp. KG, merupakan spesialis konservasi gigi yang mengutakaman kenyamanan pasien.</p>
