--- a/pages/tentang-kami/about.html
+++ b/pages/tentang-kami/about.html
@@ -78,7 +78,7 @@
           </div>
         </form>
         <li class="nav-item ml-3">
-          <a class="nav-link" data-widget="login" href="login/login.html" role="button">
+          <a class="nav-link" data-widget="login" href="../login/login.html" role="button">
             Login
           </a>
         </li>
