--- a/pages/Layanan/layanan.html
+++ b/pages/Layanan/layanan.html
@@ -56,7 +56,7 @@
                   <span class="brand-text font-weight-light">Blue Dental</span>
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0 mx-3">
                   <li class="nav-item">
-                    <a class="nav-link text-decoration-none" href="../../index.html">Home</a>
+                    <a class="nav-link text-decoration-none" href="../../index.html">Beranda</a>
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link text-decoration-none" href="layanan.html">Layanan <span class="sr-only">(current)</span></a>
