--- a/pages/admin/admin_data_dokter.html
+++ b/pages/admin/admin_data_dokter.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="../../index.html" class="nav-link">Home</a>
+                    <a href="../../index.html" class="nav-link">Beranda</a>
                 </li>
             </ul>
 
@@ -143,7 +143,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="../../index.html/#dokter-kami" class="nav-link">
+                                    <a href="../../index.html" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Dokter Kami</p>
                                     </a>
