--- a/pages/forms/form_booking.html
+++ b/pages/forms/form_booking.html
@@ -38,7 +38,7 @@
         <!-- Left navbar links -->
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a href="../../index.html" class="nav-link">Home</a>
+            <a href="../../index.html" class="nav-link">Beranda</a>
           </li>
           <li class="nav-item">
             <a href="../Layanan/layanan.html" class="nav-link">Layanan</a>
@@ -219,7 +219,7 @@
                         <div class="card-footer" style="background-color: #bfdde0">
                             <div class="row">
                                 <div class="col-3">
-                                    <button class="btn btn-primary btn-lg btn-block" type="submit">
+                                    <button class="btn btn-primary btn-lg btn-block">
                                         <a href="../admin/admin_booking.html" class="text-decoration-none text-white">Simpan</a>
                                     </button>
                                 </div>
