--- a/pages/forms/form_data_dokter.html
+++ b/pages/forms/form_data_dokter.html
@@ -37,7 +37,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <!-- Left navbar links -->
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a href="../../index.html" class="nav-link">Home</a>
+            <a href="../../index.html" class="nav-link">Beranda</a>
           </li>
           <li class="nav-item">
             <a href="../Layanan/layanan.html" class="nav-link">Layanan</a>
@@ -72,7 +72,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
             </div>
           </form>
           <li class="nav-item">
-            <a class="nav-link" data-widget="login" href="login/login.html" role="button">
+            <a class="nav-link" data-widget="login" href="../login/login.html" role="button">
               Login
             </a>
           </li>
@@ -177,7 +177,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <div class="card-footer" style="background-color: #d4f1f4">
                             <div class="row">
                                 <div class="col-3">
-                                    <button class="btn btn-primary btn-lg btn-block" type="submit">
+                                    <button class="btn btn-primary btn-lg btn-block">
                                         <a href="../admin/admin_data_dokter.html" class="text-white">Simpan</a>
                                     </button>
                                 </div>
