--- a/pages/profil-dokter/profil_dokter5.html
+++ b/pages/profil-dokter/profil_dokter5.html
@@ -45,7 +45,7 @@
           <!-- Left navbar links -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="../../index.html" class="nav-link">Home</a>
+              <a href="../../index.html" class="nav-link">Beranda</a>
             </li>
             <li class="nav-item">
               <a href="../Layanan/layanan.html" class="nav-link">Layanan</a>
@@ -178,7 +178,7 @@
                         <div class="card-body">
                           <ul class="list-unstyled">
                             <li><a href="../Layanan/layanan.html">Layanan</a></li>
-                            <li><a href="../../index.html/#dokter-kami">Dokter Kami</a></li>
+                            <li><a href="../../index.html">Dokter Kami</a></li>
                             <li><a href="../tentang-kami/about.html">Tentang Kami</a></li>
                           </ul>
                         </div>
