--- a/pages/tentang-kami/tim-kami.html
+++ b/pages/tentang-kami/tim-kami.html
@@ -60,7 +60,7 @@
             <!-- Left navbar links -->
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a href="../../index.html" class="nav-link">Home</a>
+                <a href="../../index.html" class="nav-link">Beranda</a>
               </li>
               <li class="nav-item">
                 <a href="../Layanan/layanan.html" class="nav-link">Layanan</a>
